cleaning up  dashboard graphs (fix for TDAR-4086)
- fixing fontsize of legend title so that zooming does not cause overlap issues per TDAR-4086
- fixing bootstrap "syntax error" in sidebar  (.row must only have .span children)
- killing pie data labels & pie slice margins, which look unreadable 50% of the time and ugly 99% of the time
- cleaning up the legend
- fixing tooltip z-order issue  when pie labels turned off

--- a/src/main/webapp/css/tdar-bootstrap.css
+++ b/src/main/webapp/css/tdar-bootstrap.css
@@ -1169,8 +1169,33 @@ select.searchType {
 }
 
 .piechart {
-    padding-top: 10px;
     padding-bottom: 10px;
+}
+
+/* clean up sidebar pie css */
+.sidebar table.jqplot-table-legend {
+    padding-top: 30pt;
+    border:none;
+}
+.sidebar table.jqplot-table-legend td  {
+    padding:0 0 0 2px;
+    margin:0;
+    border: none ;
+}
+
+.sidebar .jqplot-table-legend-swatch-outline {
+    border:none
+}
+
+/*jqplot bakes certain css rules into style-attr. override them with !important */
+.sidebar .jqplot-title {
+    text-align:left !important;
+    font-size: 15px;
+}
+
+/* jqplog bug: highlighter occluded by pie slices */
+.sidebar .jqplot-highlighter-tooltip {
+    z-index: 1;
 }
 
 .silhouette {
